fixed the nav bar spacing

--- a/public/main.css
+++ b/public/main.css
@@ -35,14 +35,21 @@ p {
 h1{
   margin: 20px;
 }
-ul {
-  list-style: none;
-}
 
-nav {
+ul {
   display: flex;
-  width: 100%;
+  list-style: none;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  text-align: center;
+}
+
+nav {
+  width: 100%;
+
+}
+
+li {
+  margin: 10px;
 }
